# WKMeans

./: pyproject.toml
scripts/: bench_fit.py
src/wkmeans/: __init__.py  wkmeans.py
