[project]
name = "wkmeans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pptozorux", email = "guilhem.chagper@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "POT>=0.9.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
